--- a/client/src/Styles/About.css
+++ b/client/src/Styles/About.css
@@ -1,59 +1,78 @@
 .about_background{
-    position: absolute;
-    width: 1350px;
-    height: 892px;
-    
-    background: #D9D9D9;
-    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    
+    margin-left: 150px;
 }
+
+    
 .aboutUs_person_1{
     position: absolute;
     width: 350px;
-    height: 350px;
-    margin-top: 100px;
+    height: 300px;
     margin-left: 200px;
-    background: #FFFFFF;
+    background: linear-gradient(89.82deg, #666BC5 0.15%, #B6B6DC 39.53%, #EFECEC 99.85%);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
     
+}
+
+.aboutUs_person_1:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
 }
 .aboutUs_person_2{
       position: absolute;
       width: 350px;
-      height: 350px;
-      margin-top: 100px;
+      height: 300px;
       margin-left: 800px;
-      background: #FFFFFF;
+      background: linear-gradient(89.82deg, #666BC5 0.15%, #B6B6DC 39.53%, #EFECEC 99.85%);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 10px;
+}
+.aboutUs_person_2:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
 }
 .aboutUs_person_3{
-margin-top: 500px;
+margin-top: 420px;
 margin-left: 50px;
 position: absolute;
 width: 350px;
-height: 350px;
+height: 300px;
 
-background: #FFFFFF;
+background: linear-gradient(89.82deg, #666BC5 0.15%, #B6B6DC 39.53%, #EFECEC 99.85%);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
 
 }
+.aboutUs_person_3:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
 .aboutUs_person_4{
-    margin-top: 500px;
+    margin-top: 420px;
     margin-left: 500px;
 position: absolute;
 width: 350px;
-height: 350px;
+height: 300px;
 
-background: #FFFFFF;
+background: linear-gradient(89.82deg, #666BC5 0.15%, #B6B6DC 39.53%, #EFECEC 99.85%);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+}
+.aboutUs_person_4:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
 }
 .aboutUs_person_5{
-    margin-top: 500px;
+    margin-top: 420px;
     margin-left: 950px;
 position: absolute;
 width: 350px;
-height: 350px;
+height: 300px;
 
-background: #FFFFFF;
+background: linear-gradient(89.82deg, #666BC5 0.15%, #B6B6DC 39.53%, #EFECEC 99.85%);
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 10px;
+}
+.aboutUs_person_5:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
 }
 .aboutUs_person_1_name{
-    /* MANOJ */
 
 position: absolute;
 width: 107px;
@@ -67,7 +86,7 @@ line-height: 44px;
 
 color: #000000;
 
-margin-top: 380px;
+margin-top: 245px;
 margin-left: 210px;
 }
 .aboutUs_person_2_name{
@@ -85,7 +104,7 @@ line-height: 44px;
 
 color: #000000;
 
-margin-top: 380px;
+margin-top: 245px;
 margin-left: 810px;
 }
 .aboutUs_person_3_name{
@@ -100,7 +119,7 @@ font-size: 30px;
 line-height: 44px;
 
 color: #000000;
-margin-top: 760px;
+margin-top: 630px;
 margin-left: 60px;
 
 }
@@ -116,7 +135,7 @@ font-size: 30px;
 line-height: 44px;
 
 color: #000000;
-margin-top: 760px;
+margin-top: 630px;
 margin-left: 510px;
 
 }
@@ -132,8 +151,204 @@ font-size: 30px;
 line-height: 44px;
 
 color: #000000;
-margin-top: 760px;
+margin-top: 630px;
 margin-left: 960px;
 
 }
 
+.profile1{
+position: absolute;
+width: 350px;
+height: 255px;
+top: 100px;
+left: 350px;
+background: #000000;
+padding: 2px;
+border-radius: 10px;
+
+
+}
+.profile1:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
+.profile2{
+    /* Rectangle 47 */
+
+position: absolute;
+width: 350px;
+height: 255px;
+top: 100px;
+left: 950px;
+background: #000000;
+padding: 2px;
+border-radius: 10px;
+
+
+}
+.profile2:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
+.profile3{
+    /* Rectangle 47 */
+
+position: absolute;
+width: 350px;
+height: 255px;
+top: 500px;
+left: 200px;
+
+background: #000000;
+padding: 2px;
+border-radius: 10px;
+
+}
+.profile3:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
+.profile4{
+    /* Rectangle 47 */
+
+position: absolute;
+width: 350px;
+height: 255px;
+top: 500px;
+left: 650px;
+
+background: #000000;
+padding: 2px;
+border-radius: 10px;
+}
+.profile4:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
+.profile5{
+    /* Rectangle 47 */
+
+position: absolute;
+width: 350px;
+height: 255px;
+top: 500px;
+left: 1100px;
+
+background: #000000;
+padding: 2px;
+border-radius: 10px;
+
+}
+.profile5:hover {
+    box-shadow: 0px 0px 20px 5px rgb(0, 0, 0); /* Glow effect */
+}
+.mail_1{
+position: absolute;
+width: 30px;
+height: 22px;
+top: 390px;
+left: 560px;
+}
+
+.twitter_1{
+position: absolute;
+width: 30px;
+height: 28px;
+top: 388px;
+left: 600px;
+}
+.linkedin_1{
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    top: 386px;
+    left: 640px;
+}
+.mail_2{
+position: absolute;
+width: 30px;
+height: 22px;
+top: 390px;
+left: 1160px;
+}
+.twitter_2{
+position: absolute;
+width: 30px;
+height: 28px;
+top: 388px;
+left: 1200px;
+}
+.linkedin_2{
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    top: 386px;
+    left: 1240px;
+}
+.mail_3{
+    position: absolute;
+    width: 30px;
+    height: 22px;
+    top: 778px;
+    left: 410px;
+    }
+.twitter_3{
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    top: 775px;
+    left: 450px;
+    }
+.linkedin_3{
+        position: absolute;
+        width: 30px;
+        height: 28px;
+        top: 775px;
+        left: 490px;
+    }
+.mail_4{
+position: absolute;
+width: 30px;
+height: 22px;
+top: 778px;
+left: 860px;
+}
+.twitter_4{
+position: absolute;
+width: 30px;
+height: 28px;
+top: 775px;
+left: 900px;
+}
+.linkedin_4{
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    top: 775px;
+    left: 940px;
+}
+.mail_5{
+position: absolute;
+width: 30px;
+height: 22px;
+top: 778px;
+left: 1310px;
+}
+.twitter_5{
+position: absolute;
+width: 30px;
+height: 28px;
+top: 775px;
+left: 1350px;
+}
+.linkedin_5{
+    position: absolute;
+    width: 30px;
+    height: 28px;
+    top: 775px;
+    left: 1390px;
+}
+.video-background {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -1;
+  }
