--- a/client/src/Styles/NonVeg.css
+++ b/client/src/Styles/NonVeg.css
@@ -1,98 +1,110 @@
+.Nonveg-page {
+  padding: 0;
+  margin: 0;
+}
+
+.header-component {
+  width: 100%;
+  position: relative;
+  z-index: 1000;
+}
+
+
+.content {
+  margin-top: 60px; /* Add some margin to separate content from the header */
+  padding: 20px;
+}
+
+.header, .header1 {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 36px;
+  color: #000000;
+  margin: 20px 0;
+}
+
+.scroll-container {
+  display: flex;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  padding: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+  margin-bottom: 20px;
+}
+
+.scroll-container::-webkit-scrollbar {
+  width: 0;
+}
+
+.product {
+  display: inline-block;
+  height: 350px;
+  width: 280px;
+  margin: 0 15px;
+  filter: drop-shadow(10px 4px 4px rgba(0, 0, 0, 0.25));
+  background: linear-gradient(180deg, #D6EAF5 0%, #96D4F6 100%);
+  text-align: center;
+}
+
+.gallery-image {
+  width: 100%;
+  height: auto;
+}
+
+.Dish_text {
+  color: black;
+}
+
 .header{
-    position: absolute;
-    width: 65px;
-    height: 36px;
-    left: 42px;
-    top: 90px;
-    
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 36px;
-    
-    color: #000000;
-    z-index: 1;
-    display: flex;
-    }
-    
-    .background{
-    
-    position: absolute;
-    width: 1350px;
-    height: 884px;
-    left: 0px;
-    top: 80px;
-    
-    background: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-    z-index: -1;
-    display: grid;
-    grid-auto-flow: column;
-    grid-auto-columns: 25%;
-    
-    }
-    
-    
-    .gallery-container {
-        width: 100%;
-        overflow-x: auto;
-        overflow-y: hidden;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
-      
-      .image-gallery {
-        display: flex;
-      }
-      
-      .gallery-image {
-        width: 280px; 
-        height: auto;
-        display: inline-block;
-      }
-      .scroll-container {
-        overflow: auto;
-        white-space: nowrap;
-        padding: 10px;
-        display: flex;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
-      }
-      
-      .scroll-container img {
-        padding: 10px;
-      }
-      .scroll-container::-webkit-scrollbar{
-        width: 0px;
-      }
-    
-      .header1{
-    /* position: absolute; */
-    width: 159px;
-    height: 36px;
-    left: 42px;
-    top: 540px;
-    margin-left: 42px;
-    
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 36px;
-    
-    color: #000000;
-    
-    
-      }
-    
-      .product{
-        height: 350px;
-        width: auto;
-        margin-right: 30px;
-        filter: drop-shadow(10px 4px 4px rgba(0, 0, 0, 0.25));
-        background: linear-gradient(180deg, #D6EAF5 0%, #96D4F6 100%);
-    
-      }
-      .Dish_text{
-        color: black;
-      }
+  margin-top: 50px;
+  margin-left: 30px;
+}
+@media screen and (max-width: 1024px) {
+  .product {
+    width: 220px;
+    height: 300px;
+    margin: 0 10px;
+  }
+
+  .header, .header1 {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .product {
+    width: 180px;
+    height: 250px;
+    margin: 0 8px;
+  }
+
+  .header, .header1 {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  .header{
+    margin-top: 80px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .product {
+    width: 140px;
+    height: 200px;
+    margin: 0 5px;
+  }
+
+  .header, .header1 {
+    font-size: 18px;
+    line-height: 24px;
+  }
+  .header{
+    margin-top: 135px;
+  }
+  
+}
+
