--- a/client/src/Styles/Beverages.css
+++ b/client/src/Styles/Beverages.css
@@ -3,7 +3,7 @@
     width: 65px;
     height: 36px;
     left: 42px;
-    top: 90px;
+    top: 60px;
     
     font-family: 'Inter';
     font-style: normal;
@@ -95,4 +95,16 @@
       }
       .Dish_text{
         color: black;
+      }
+
+      @media screen and (max-width: 768px) {
+        .header{
+          top:10px
+        }
+      }
+
+      @media screen and (max-width: 480px) {
+        .header{
+          top:-20px
+        }
       }
