--- a/client/src/Styles/Header.css
+++ b/client/src/Styles/Header.css
@@ -1,13 +1,117 @@
-.nav-link-custom{
-    text-decoration: none;
-    font-family: 'Scheherazade New';
-    margin: 10px;
-    color: #000000;
-    font-style: normal;
-    font-size: 18px;
+@import url("https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Titillium+Web:wght@300;400;700&display=swap");
+
+:root {
+  --mainColor: rgb(183, 195, 193);
+  --mainColorLight: #5767aa;
+  --secondaryColor: #db2b39;
+  --textColor: #eee;
 }
 
-.Header{
-    margin-top: -20px;
-    background-color:  rgb(202, 220, 232);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "Titillium Web", sans-serif;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 80px;
+  padding: 0 2rem;
+  background-color: rgb(183, 195, 193);
+  color: var(--textColor);
+  position: relative;
+  z-index: 10;
+}
+
+.logo-f {
+  height: 100px;
+  width: 100px;
+}
+
+.brand-name {
+  font-family: 'Scheherazade New', serif;
+  font-weight: 700;
+  font-size: 35px;
+  line-height: 45px;
+  color: #000000;
+  margin-left: 10px;
+}
+
+nav {
+  display: flex;
+  align-items: center;
+}
+
+.nav-item {
+  list-style: none;
+}
+
+.nav-link-custom {
+  text-decoration: none;
+  font-family: 'Scheherazade New', serif;
+  margin: 10px;
+  color: #000000;
+  font-size: 18px;
+}
+
+.user-menu {
+  display: flex;
+  margin-left: 140px;
+}
+
+.user-logo {
+  height: 35px;
+  width: 35px;
+}
+
+.nav-btn {
+  padding: 5px;
+  cursor: pointer;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: var(--textColor);
+  font-size: 1.8rem;
+  display: none;
+}
+
+@media only screen and (max-width: 1024px) {
+  .nav-btn {
+    display: inline;
+  }
+
+  nav {
+    position: fixed;
+    top: 0;
+    right: -100vw;
+    height: 100%;
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+    background-color: var(--mainColor);
+    transition: right 0.3s ease-in-out;
+    z-index: 20;
+  }
+
+  .responsive_nav {
+    right: 0;
+  }
+
+  .nav-close-btn {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    z-index: 30; /* Ensure close button is above other content */
+  }
+
+  .nav-link-custom {
+    font-size: 1.5rem;
+  }
 }
