--- a/client/src/Styles/Landing.css
+++ b/client/src/Styles/Landing.css
@@ -168,12 +168,13 @@ font-weight: 900;
 
 .cta-text {
     max-width: 60%;
+    margin-top: 10px;
 }
 
 .cta-buttons {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    gap: 50px;
     margin-right: 150px;
 }
 
@@ -201,14 +202,18 @@ font-weight: 900;
     .home_logo_modified {
         width: 40%; /* Adjusted for smaller screens */
         margin-top: 20px;
-        margin-left: 400px;
+        margin-left: 350px;
 
     }
     .biryani_text_modified {
-        margin-left: 5px;
+        margin-left: -50px;
     }
     .biryani_text1_modified {
-       margin-left: 150px;
+       margin-left: 5px;
+    }
+
+    .homebutton_modified {
+       margin-left: 5px;
     }
 
     .menu-categories {
@@ -228,17 +233,25 @@ font-weight: 900;
     .cta-text {
         max-width: 100%;
         margin-bottom: 20px;
+        margin-top: 10px;
     }
 
     .cta-buttons {
         display: flex;
-        gap: 10px;
+        gap: 1px;
         
     }
 
-    .cta-buttons .login,
     .cta-buttons .signup {
-        margin: 0 10px;
+        padding: 8px 16px;
+        margin-bottom: 80px;
+        margin-left: 70px;
+        
+    }
+    .cta-buttons .login{
+        padding: 8px 16px;
+        margin-bottom: 80px;
+        margin-left: 150px;
     }
 
 
@@ -254,32 +267,48 @@ font-weight: 900;
     .biryani_text_modified {
         font-size: 100px;
         margin-left: -30px;
+        margin-top: 0px;
         
     }
 
     .biryani_text1_modified {
         font-size: 20px;
         margin-top: -30px;
-        margin-right: 100px;
+        margin-right: 30px;
+    }
+    .cta-text {
+        max-width: 100%;
+        margin-bottom: 20px;
+        margin-top: 10px;
     }
 
     .homebutton_modified {
         padding: 8px 16px;
-        margin-right: 130px;
+        margin-right: 30px;
     }
 
-    .cta-buttons .login,
+    
     .cta-buttons .signup {
         padding: 8px 16px;
-        margin: 5px 0;
+        margin-bottom: 80px;
+        margin-left: 70px;
+        
+    }
+    .cta-buttons .login{
+        padding: 8px 16px;
+        margin-bottom: 80px;
+        margin-left: 150px;
     }
 
     .cta-buttons {
         flex-direction: row;
+        gap: 1px;
+
     }
     
     .home_logo_modified{
-        margin-left: 300px;
+        margin-left: 320px;
+        width: 30%;
 
     }
 
