--- a/client/src/Styles/Landing.css
+++ b/client/src/Styles/Landing.css
@@ -93,12 +93,24 @@ font-weight: 900;
     justify-content: center;
     align-items: center;
     margin-right: 150px;
+    width: 350px;
+height: 305px;
+left: 912px;
+top: 87px;
+border-radius: 100%;
+background: #6466BD;
 }
 
 .home_logo_modified {
     width: 300px;
     height: auto;
-    margin-right: 170px;
+    margin-right: 32px;
+    width: 308px;
+height: 305px;
+margin-left: -5px;
+box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+border-radius: 100%;
+background-color: #000000;
 }
 
 
@@ -196,6 +208,7 @@ font-weight: 900;
     .hero-section-modified {
         flex-direction: column;
         text-align: center;
+      
     }
 
     .home_logo_modified {
@@ -223,6 +236,7 @@ font-weight: 900;
     .cta-content {
         flex-direction: column;
         text-align: center;
+       
     }
 
     .cta-text {
@@ -240,7 +254,42 @@ font-weight: 900;
     .cta-buttons .signup {
         margin: 0 10px;
     }
+    .hero_image_container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+       margin-top: 40px;
+       margin-left: 250px;
+        width: 350px;
+    height: 305px;
+    left: 12px;
+    top: 87px;
+    border-radius: 100%;
+    background: #6466BD;
+    }
+    
+    .home_logo_modified {
+        width: 300px;
+        height: auto;
+        margin-right: 32px;
+        width: 308px;
+    height: 305px;
+    margin-left: -5px;
+    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 100%;
+    background-color: #000000;
+    }
 
+    .cta-section {
+        background-color: #7072D3;
+        color: white;
+        padding: 10 px;
+        text-align: left;
+        display: flex;
+        justify-content: center;
+        height: 270px;
+        padding-top: 20px;
+    }
 
 }
 
@@ -266,6 +315,7 @@ font-weight: 900;
     .homebutton_modified {
         padding: 8px 16px;
         margin-right: 130px;
+        
     }
 
     .cta-buttons .login,
