--- a/client/src/Styles/Veg.css
+++ b/client/src/Styles/Veg.css
@@ -25,13 +25,12 @@
   margin: 20px 0;
 }
 
-.scroll-container {
+.scroll-containerveg {
   display: flex;
   overflow-x: auto;
   overflow-y: hidden;
-  white-space: nowrap;
+ 
   padding: 10px;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   margin-bottom: 20px;
 }
 
@@ -39,7 +38,7 @@
   width: 0;
 }
 
-.product {
+/* .product {
   display: inline-block;
   height: 350px;
   width: 280px;
@@ -47,7 +46,7 @@
   filter: drop-shadow(10px 4px 4px rgba(0, 0, 0, 0.25));
   background: linear-gradient(180deg, #D6EAF5 0%, #96D4F6 100%);
   text-align: center;
-}
+} */
 
 .gallery-image {
   width: 100%;
