--- a/client/src/Styles/signup.css
+++ b/client/src/Styles/signup.css
@@ -1,5 +1,5 @@
 .signup-page {
-  height: 100vh;
+  height: 900px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -27,13 +27,14 @@
 .form-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  /* align-items: center; */
   width: 100%;
   max-width: 400px;
   padding: 30px;
   background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-left: -50px;
 }
 
 .signup-form {
@@ -41,6 +42,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+ 
 }
 
 .signup-heading {
@@ -52,6 +54,7 @@
 .form-group {
   width: 100%;
   margin-bottom: 20px;
+ 
 }
 
 .form-control {
@@ -103,12 +106,31 @@
   margin-bottom: 10px;
 }
 
-@media (min-width: 576px) {
+@media (min-width: 480px) {
   .form-container {
     padding: 40px;
+    margin-left: 65px;
   }
+
+  
 }
 
+@media (max-width: 400px) {
+  .form-container {
+    padding: 40px;
+    margin-left: 60px;
+    
+  }
+  .signup-page{
+    height: 1200px;
+  }
+}
+@media (min-width: 150px) {
+  .form-container {
+    padding: 40px;
+    margin-left: 50px;
+    
+  }}
 @media (min-width: 768px) {
   .signup-heading {
     font-size: 28px;
@@ -116,6 +138,7 @@
 
   .form-container {
     padding: 50px;
+    margin-left: 90px;
   }
 }
 
