--- a/client/src/Styles/Product.css
+++ b/client/src/Styles/Product.css
@@ -28,11 +28,12 @@
     margin: 10px;
     height: 370px;
     border: none;
+    
   }
   
   .card:hover {
-  
-    border: 2px solid lightgray;
+  padding: 5px;
+  border: 2px solid lightgray;
   }
 .gRXfSm {
     position: relative;
@@ -92,3 +93,4 @@
         overflow-x: hidden;
     }
 }
+
